<resources>
    <string name="app_name">Inventory App</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_editor">Product Name</string>
    <string name="name_editor">Name</string>
    <string name="product_price_editor">Price</string>
    <string name="supplier_editior">Supplier</string>
    <string name="quantity_editor">Quantity</string>
    <string name="units_editor">0</string>
    <string name="sale_editor">Sale</string>
    <string name="add_a_new_product">Add a new product</string>
    <string name="price_editor_hint">Price</string>
    <string name="insert_a_new_picture">Add image</string>
    <string name="discard_quit_dialog">Discard your changes and quit editing?</string>
    <string name="discard_dialog">Discard</string>
    <string name="keep_editing_dialog">Keep editing</string>
    <string name="delete_item_dialog">Delete this product</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="error_saving_product">Error saving product</string>
    <string name="product_saved">Product saved</string>
    <string name="update_failed">Update failed</string>
    <string name="update_successful">Update successful</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="error_deleting_product">Error with deleting the product</string>
    <string name="product_deleted">Product deleted</string>
    <string name="unknown_name">Unknown name</string>
    <string name="unknown_price">Unknown price</string>
    <string name="unknown_supplier">Unknown supplier</string>
    <string name="unknown_quantity">Unknown quantity</string>
    <string name="quantity_zero">Quantity cannot be less than 0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">order</string>
    <string name="missing_info">Please enter the missing info</string>

</resources>
