<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/padding_layout"
    android:paddingLeft="@dimen/padding_layout"
    android:paddingRight="@dimen/padding_layout"
    android:paddingStart="@dimen/padding_layout">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin_layout"
        android:layout_marginStart="@dimen/margin_layout"
        android:orientation="vertical">



        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_right"
            android:paddingLeft="@dimen/padding_right"

            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            tools:text="@string/product_name" />
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_right"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            tools:text="@string/price" />
        <TextView
            android:id="@+id/supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/padding_right"

            android:textSize="@dimen/textSize"
            tools:text="@string/supplier" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_right"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:paddingBottom="@dimen/padding_right"
            tools:text="@string/quantity" />
    </LinearLayout>


</LinearLayout>